name:               NasyMoe
version:            0.1.0.0
Synopsis:           Personal website of Nasy
Description:        Personal website of Nasy
Author:             Nasy
Maintainer:         nasyxx+nasymoe@gmail.com
build-type:         Simple
Category:           Web
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  build-depends:    base
                  , containers
                  , hakyll
                  , filepath
                  , process
                  , blaze-html
                  , pandoc
                  , pandoc-types
  ghc-options:      -Wall -threaded
  Hs-source-dirs:   src
  default-language: Haskell2010
